corrected nav alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,6 @@ header h1 {
 }
 
 nav {
-	width: 300px;
 	float: right;
 	margin-top: 40px;
 	text-align: center;
